Project

General

Profile

Actions

Bug #40695

closed

mds: rework PurgeQueue on_error handler to avoid mds_lock state check

Added by Patrick Donnelly almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
Code Hygiene
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Actions #1

Updated by Zheng Yan almost 5 years ago

  • Assignee changed from Venky Shankar to Zheng Yan
Actions #2

Updated by Zheng Yan almost 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 29064
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Category set to Code Hygiene
  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF