mds: execute PurgeQueue on_error handler in finisher

Fix: https://tracker.ceph.com/issues/40695
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>